--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,11 +1,10 @@
-<!-- templates/child.html -->
 <!doctype html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>My Title</title>
+  <title>{% block title %}Default Title{% endblock %}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -14,10 +13,10 @@
   <div class="d-flex flex-column min-vh-100 min-vw-100">
     <div class="d-flex flex-grow-1 justify-content-center align-items-center">
       <div class="d-grid gap-2 col-4 mx-auto">
-        
-
-
-        <!--  -->
+        {% block content %}{% endblock %}
+        <!-- {% for link in links %}
+        <a class="btn btn-outline-primary" href="{{ link.href }}" role="button">{{ link.text }}</a>
+        {% endfor %} -->
       </div>
     </div>
   </div>
