--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,27 +1,10 @@
-<!doctype html>
-<html lang="en">
+<!-- templates/child.html -->
+{% extends "base.html" %}
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
+{% block title %}{{ title }}{% endblock %}
 
-<body>
-  <div class="d-flex flex-column min-vh-100 min-vw-100">
-    <div class="d-flex flex-grow-1 justify-content-center align-items-center">
-      <div class="d-grid gap-2 col-4 mx-auto">
-        {% for link in links %}
-        <a class="btn btn-outline-primary" href="{{ link.href }}" role="button">{{ link.text }}</a>
-        {% endfor %}
-      </div>
-    </div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% block content %}
+{% for link in links %}
+<a class="btn btn-outline-primary" href="{{ link.href }}" role="button">{{ link.text }}</a>
+{% endfor %}
+{% endblock %}
