Add flashcard functionality

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,14 +9,11 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="text-bg-dark">
   <div class="d-flex flex-column min-vh-100 min-vw-100">
     <div class="d-flex flex-grow-1 justify-content-center align-items-center">
       <div class="d-grid gap-2 col-4 mx-auto">
         {% block content %}{% endblock %}
-        <!-- {% for link in links %}
-        <a class="btn btn-outline-primary" href="{{ link.href }}" role="button">{{ link.text }}</a>
-        {% endfor %} -->
       </div>
     </div>
   </div>
