--- a/src/templates/carousel.html
+++ b/src/templates/carousel.html
@@ -4,10 +4,19 @@
 
 {% block content %}
 <div id="carousel" class="carousel slide">
-    <div class="carousel-inner">
+    <div class="carousel-inner" style="width: 70%; margin-left: 15%;">
         {% for slide in slides %}
-        <div class="carousel-item active">
-            Slide
+        <div class="carousel-item">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        {{ slide.text | safe }}
+                    </div>
+                    <div class="flip-card-back">
+                        {{ slide.code | safe }}
+                    </div>
+                </div>
+            </div>
         </div>
         {% endfor %}
     </div>
@@ -20,5 +29,66 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+<script>
+    document.querySelector(".carousel-item").classList.add("active")
+    const myCarouselElement = document.querySelector('#carousel')
+    const carousel = new bootstrap.Carousel(myCarouselElement)
+</script>
+<style>
+    .flip-card {
+        background-color: transparent;
+        /* width: 100%; */
+        height: 300px;
+        /* border: 1px solid #f1f1f1; */
+        /* perspective: 1000px; */
+        /* Remove this if you don't want the 3D effect */
+    }
 
+    /* This container is needed to position the front and back side */
+    .flip-card-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        /* text-align: center; */
+        transition: transform 0.8s;
+        transform-style: preserve-3d;
+    }
+
+    /* Do an horizontal flip when you move the mouse over the flip box container */
+    .flip-card:hover .flip-card-inner {
+        transform: rotateY(180deg);
+    }
+
+    /* Position the front and back side */
+    .flip-card-front,
+    .flip-card-back {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        -webkit-backface-visibility: hidden;
+        /* Safari */
+        backface-visibility: hidden;
+    }
+
+    /* Style the front side (fallback if image is missing) */
+    /* .flip-card-front {
+        background-color: #bbb;
+        color: black;
+    } */
+
+    /* Style the back side */
+    .flip-card-back {
+        /* background-color: dodgerblue;
+        color: white; */
+        transform: rotateY(180deg);
+    }
+
+    .vertical-center {
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+    }
+</style>
 {% endblock %}
