--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 {% for link in links %}
-<a class="btn btn-outline-primary" href="{{ link.href }}" role="button">{{ link.text }}</a>
+<a class="btn btn-outline-light" href="{{ link.href }}" role="button">{{ link.text }}</a>
 {% endfor %}
 {% endblock %}
