--- a/src/templates/carousel.html
+++ b/src/templates/carousel.html
@@ -10,11 +10,15 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
+                        <div class="card">
+                            <div class="card-body">
                         {{ slide.text | safe }}
-                    </div>
+                    </div></div></div>
                     <div class="flip-card-back">
+                        <div class="card">
+                            <div class="card-body">
                         {{ slide.code | safe }}
-                    </div>
+                    </div></div></div>
                 </div>
             </div>
         </div>
@@ -38,7 +42,7 @@
     .flip-card {
         background-color: transparent;
         /* width: 100%; */
-        height: 300px;
+         height: 300px;
         /* border: 1px solid #f1f1f1; */
         /* perspective: 1000px; */
         /* Remove this if you don't want the 3D effect */
