--- a/src/templates/carousel.html
+++ b/src/templates/carousel.html
@@ -7,18 +7,22 @@
     <div class="carousel-inner" style="width: 70%; margin-left: 15%;">
         {% for slide in slides %}
         <div class="carousel-item">
-            <div class="flip-card">
+            <div class="flip-card m-3">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <div class="card">
+                        <div class="card h-100 text-bg-dark border-light">
                             <div class="card-body">
-                        {{ slide.text | safe }}
-                    </div></div></div>
+                                {{ slide.text | safe }}
+                            </div>
+                        </div>
+                    </div>
                     <div class="flip-card-back">
-                        <div class="card">
+                        <div class="card h-100 text-bg-dark border-light">
                             <div class="card-body">
-                        {{ slide.code | safe }}
-                    </div></div></div>
+                                {{ slide.code | safe }}
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -41,8 +45,8 @@
 <style>
     .flip-card {
         background-color: transparent;
-        /* width: 100%; */
-         height: 300px;
+        /* width: 200px; */
+        height: 300px;
         /* border: 1px solid #f1f1f1; */
         /* perspective: 1000px; */
         /* Remove this if you don't want the 3D effect */
@@ -59,9 +63,9 @@
     }
 
     /* Do an horizontal flip when you move the mouse over the flip box container */
-    .flip-card:hover .flip-card-inner {
+    /* .flip-card:hover .flip-card-inner {
         transform: rotateY(180deg);
-    }
+    } */
 
     /* Position the front and back side */
     .flip-card-front,
@@ -97,5 +101,24 @@
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-<script>hljs.highlightAll();</script>
+<script>
+    hljs.highlightAll();
+    document.addEventListener('DOMContentLoaded', (event) => {
+        const flipCards = document.querySelectorAll('.flip-card');
+
+        flipCards.forEach(flipCard => {
+            const flipCardInner = flipCard.querySelector('.flip-card-inner');
+            let isFlipped = false;
+
+            flipCard.addEventListener('click', () => {
+                if (isFlipped) {
+                    flipCardInner.style.transform = 'rotateY(0deg)';
+                } else {
+                    flipCardInner.style.transform = 'rotateY(180deg)';
+                }
+                isFlipped = !isFlipped;
+            });
+        });
+    });
+</script>
 {% endblock %}
