Trying to overflow wrap long lines of code

--- a/src/templates/carousel.html
+++ b/src/templates/carousel.html
@@ -20,7 +20,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body">
+                                    <div class="card-body" style="overflow-wrap: break-word;">
                                         {{ slide.code | safe }}
                                     </div>
                                 </div>
@@ -31,14 +31,14 @@
                 {% endfor %}
             </div>
         </div>
-        <div class="row m-3">
-            <div class="col">
+        <div class="row">
+            <div class="col ms-3">
                 <button class="btn btn-dark btn-lg btn-outline-light w-100" type="button" data-bs-target="#carousel" data-bs-slide="prev">
                     <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
                     <span class="">Previous</span>
                 </button>
             </div>
-            <div class="col">
+            <div class="col me-3">
                 <button class="btn btn-dark btn-lg btn-outline-light w-100" type="button" data-bs-target="#carousel" data-bs-slide="next">
                     <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
                     <span class="">Next</span>
