Second attempt at making long lines of code wrap

--- a/src/templates/carousel.html
+++ b/src/templates/carousel.html
@@ -20,7 +20,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body" style="overflow-wrap: break-word;">
+                                    <div class="card-body">
                                         {{ slide.code | safe }}
                                     </div>
                                 </div>
@@ -107,6 +107,10 @@
         top: 50%;
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
+    }
+
+    pre {
+        white-space: pre-wrap;
     }
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
