Python control flow content

--- a/src/templates/carousel.html
+++ b/src/templates/carousel.html
@@ -51,7 +51,7 @@
     document.querySelector(".carousel-item").classList.add("active")
     const myCarouselElement = document.querySelector('#carousel')
     const carousel = new bootstrap.Carousel(myCarouselElement, {
-        touch: true,
+        touch: false,
     });
 </script>
 <style>
