Format the markdown as two sections

--- a/src/templates/carousel.html
+++ b/src/templates/carousel.html
@@ -14,14 +14,14 @@
                             <div class="flip-card-front">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        {{ slide.text | safe }}
+                                        {{ slide.question | safe }}
                                     </div>
                                 </div>
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        {{ slide.code | safe }}
+                                        {{ slide.answer | safe }}
                                     </div>
                                 </div>
                             </div>
